--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style></style>
 </head>
 <body>
     <form>
@@ -47,7 +48,6 @@
         } else {
             resultado.textContent = "Você já excedeu o número de faltas"
         }
-        cargaHoraria = 0
     } )
     
 
